--- a/templates/expense_type/delete.html
+++ b/templates/expense_type/delete.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<div class="card">
 	    <div class="card-header">
-	        <h5 class="card-title">Delete Fund #{{object.id}}</h5>
+	        <h5 class="card-title">Delete Expense #{{object.id}}</h5>
 	    </div>
 	    <div class="card-body">
 	        <form method="post" action="">
