--- a/templates/expense_type/detail.html
+++ b/templates/expense_type/detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<div class="card">
 	    <div class="card-header">
-	        <h5 class="card-title">Fund Details #{{fund.id}}</h5>
+	        <h5 class="card-title">Fund Expense Type #{{expense_type.id}}</h5>
 	        {% if not is_expired %}
 	        	<p class="alert alert-warning">You can only update or delete within 12hrs after creation<br>
 	        	If the fund is already in use even within 12hrs of creation, 
@@ -15,15 +15,9 @@
 	    <div class="card-body">
 	    <dl class="row">
 	      <dt class="col-sm-3">Name</dt>
-	      <dd class="col-sm-9">{{ fund.name}}</dd>
+	      <dd class="col-sm-9">{{ expense_type.name}}</dd>
 	      <dt class="col-sm-3">Description</dt>
-	      <dd class="col-sm-9">{{ fund.description}}</dd>
-	      <dt class="col-sm-3">Category</dt>
-	      <dd class="col-sm-9">{{fund.category}}</dd>
-	      <dt class="col-sm-3">Amount</dt>
-	      <dd class="col-sm-9">{{fund.amount}}</dd>
-	      <dt class="col-sm-3">Date</dt>
-	      <dd class="col-sm-9">{{fund.timestamp}}</dd>
+	      <dd class="col-sm-9">{{ expense_type.description}}</dd>
 	    </dl>
 
 	    </div>
@@ -32,7 +26,6 @@
 		<a href="{{update_link}}" class="btn btn-success">update</a>
 		<a href="{{delete_link}}" class="btn btn-danger">delete</a>
 	{% endif %}
-	<a href="{{fund_allocation_link}}" class="btn btn-dark">fund allocation</a>
 
 	<a href="{{go_back_link}}" class="btn btn-info">go back</a>
 {% endblock %}
