--- a/templates/expense_type/list.html
+++ b/templates/expense_type/list.html
@@ -6,25 +6,17 @@
 				<a href="{{go_home_link}}" class="nav-link">Home</a>
 			</li>
 		</ul>
-	<p>
-		<b>Unallocated Balance: </b> {{unallocated_balance}}<br>
-		<b>Total Balance: </b> {{total_balance}}<br>
-	</p>
 	<table class="table table-striped">
 		<tr>
 			<th>name</th>
 			<th>description</th>
-			<th>category</th>
-			<th>amount</th>
 		</tr>
-		{% for entry, detail_link in fund_details %}
+		{% for entry, detail_link in expense_type_details %}
 			<tr>
 				<td><a href="{{detail_link}}">{{entry.name}}</a></td>
 				<td>{{entry.description}}</td>
-				<td>{{entry.category}}</td>
-				<td>{{entry.amount}}</td>
 			</tr>
 		{% endfor %}
 	</table>
-	<a href="{{add_fund_link}}" class="btn btn-success" role="button">add fund</a>
+	<a href="{{add_expense_type_link}}" class="btn btn-success" role="button">add Expense Type</a>
 {% endblock %}
