--- a/templates/expense_type/update.html
+++ b/templates/expense_type/update.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="card">
     <div class="card-header">
-        <h5 class="card-title">Fund Update #{{fund.id}}</h5>
+        <h5 class="card-title">Expense Type Update #{{fund.id}}</h5>
     </div>
     <div class="card-body">
         <form method="post">
