--- a/templates/expense_type/list.html
+++ b/templates/expense_type/list.html
@@ -11,12 +11,12 @@
 			<th>name</th>
 			<th>description</th>
 		</tr>
-		{% for entry, detail_link in expense_type_details %}
+		{% for entry, detail_link in context_object_details %}
 			<tr>
 				<td><a href="{{detail_link}}">{{entry.name}}</a></td>
 				<td>{{entry.description}}</td>
 			</tr>
 		{% endfor %}
 	</table>
-	<a href="{{add_expense_type_link}}" class="btn btn-success" role="button">add Expense Type</a>
+	<a href="{{add_object_link}}" class="btn btn-success" role="button">add Expense Type</a>
 {% endblock %}
