added the card for Expense Type app

--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -47,4 +47,13 @@
 	    <a href="{{list_home_link}}" class="card-link">Go to List</a>
 	  </div>
 	</div>
+
+	<div class="card" style="width: 18rem;">
+	  <div class="card-body">
+	    <h5 class="card-title">Expense Type</h5>
+	    <h6 class="card-subtitle mb-2 text-muted">app</h6>
+	    <p class="card-text">add expense types for your expenses</p>
+	    <a href="{{list_home_link}}" class="card-link">Go to ExpenseType</a>
+	  </div>
+	</div>
 {% endblock %}
