--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -53,7 +53,7 @@
 	    <h5 class="card-title">Expense Type</h5>
 	    <h6 class="card-subtitle mb-2 text-muted">app</h6>
 	    <p class="card-text">add expense types for your expenses</p>
-	    <a href="{{list_home_link}}" class="card-link">Go to ExpenseType</a>
+	    <a href="{{expense_type_link}}" class="card-link">Go to ExpenseType</a>
 	  </div>
 	</div>
 {% endblock %}
