added the income type card to the homepage

--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -56,4 +56,13 @@
 	    <a href="{{expense_type_link}}" class="card-link">Go to ExpenseType</a>
 	  </div>
 	</div>
+
+	<div class="card" style="width: 18rem;">
+	  <div class="card-body">
+	    <h5 class="card-title">Income Type</h5>
+	    <h6 class="card-subtitle mb-2 text-muted">app</h6>
+	    <p class="card-text">add income types for your expenses</p>
+	    <a href="{{income_type_link}}" class="card-link">Go to IncomeType</a>
+	  </div>
+	</div>
 {% endblock %}
