--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -56,7 +56,7 @@
 			createSelectControl(category_names, 'category', 'category-control', createTable);
 			// create a selector for dates
 			let dict = {}
-			raw_expense_data.map((expense_data) => expense_data.timestamp).forEach((date) => dict[date]=date)
+			raw_expense_data.map((expense_data) => expense_data.timestamp.slice(5,10)).forEach((date) => dict[date]=date)
 			createSelectControl(dict, 'date', 'start-date-control', createTable);
 		}
 
