--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -57,7 +57,8 @@
 			// create a selector for dates
 			let dict = {}
 			raw_expense_data.map((expense_data) => expense_data.timestamp.slice(5,10)).forEach((date) => dict[date]=date)
-			createSelectControl(dict, 'date', 'start-date-control', createTable);
+			createSelectControl(dict, 'start-date', 'start-date-control', createTable);
+			createSelectControl(dict, 'end-date', 'end-date-control', createTable);
 		}
 
 		// filter expenses bases on selected controls
@@ -139,14 +140,16 @@
 
 		// make a expense chart
 		const make_expense_chart = async() =>{
-			var chart_data = process_chart_data(raw_expense_data.map((data) => data.price), raw_expense_data.map((data) => data.timestamp.slice(5, 10)));
+			let expense_data = filterData()
+			var chart_data = process_chart_data(expense_data.map((data) => data.price), expense_data.map((data) => data.timestamp.slice(5, 10)));
 			make_chart(chart_data, "expenses");
 		}
 
 		// make a chart for fund and category
 		const make_fund_chart = () => {
-			let fund = raw_expense_data.map((expense) => expense.fund);
-			let price = raw_expense_data.map((expense) => expense.price)
+			let expense_data = filterData()
+			let fund = expense_data.map((expense) => expense.fund);
+			let price = expense_data.map((expense) => expense.price)
 			let chart_data = findAllIndices(fund, price);
 			chart_data["labels"] = chart_data["labels"].map((label) => fund_names[label]);
 			make_chart(chart_data, "Total Expenses per Fund");
@@ -154,8 +157,9 @@
 
 		// make a chart for fund and category
 		const make_category_chart = () => {
-			let category = raw_expense_data.map((expense) => expense.category);
-			let price = raw_expense_data.map((expense) => expense.price)
+			let expense_data = filterData()
+			let category = xpense_data.map((expense) => expense.category);
+			let price = expense_data.map((expense) => expense.price)
 			let chart_data = findAllIndices(category, price);
 			chart_data["labels"] = chart_data["labels"].map((label) => category_names[label]);
 			make_chart(chart_data, "Total Expenses per Category");
