--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -86,7 +86,7 @@
 				if(selectedValue=='expense-chart') make_expense_chart();
 				else if(selectedValue=='fund-chart') make_fund_chart();
 				else if(selectedValue=='category-chart') make_category_chart();
-				else() cosole.log("RAdio buttons are fucked");
+				else console.log("RAdio buttons are fucked");
 			}	
 			createTable();
 		} 
