added the link the the statistics view of the expenses

--- a/templates/expenses/list.html
+++ b/templates/expenses/list.html
@@ -32,6 +32,7 @@
 	</table>
 	<p><b>Total: </b>{{total_expenditure}}</p>
 	<a href="{{add_expense_link}}" class="btn btn-success" role="button">add expense</a>
+	<a href="{{stats_link}}" class="btn btn-primary" role="button">Statistics</a>
 	
 	{% if is_paginated %}
     	{% include "expenses/_pagination.html" %}
