--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
 	<title>{% block title %}Title Here{% endblock %}</title>
 	<!-- CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+	{% load static %}
+	<link rel="stylesheet" type="text/css" href='{% static "css/custom_css.css" %}'>
 </head>
 <body>
 	{% block content %}
