--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -1,5 +1,7 @@
-{% extends 'expense_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	Expense | Statistics
+{% endblock %}
 {% block content %}
 	<h3>Hard Wood Laminate</h3>
 	    <label for="interval">Interval:</label>
