--- a/templates/expenses/list.html
+++ b/templates/expenses/list.html
@@ -1,5 +1,7 @@
-{% extends 'expense_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	Expense | Home
+{% endblock %}
 {% block content %}
 		<ul class="nav">
 			<li class="nav-item">
