--- a/templates/diary/list.html
+++ b/templates/diary/list.html
@@ -1,5 +1,7 @@
-{% extends 'diary_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	Diary | Home
+{% endblock %}
 {% block content %}
 		<ul class="nav">
 			<li class="nav-item">
