--- a/templates/expense_type/create.html
+++ b/templates/expense_type/create.html
@@ -1,5 +1,7 @@
-{% extends 'fund_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	Expense Type | Add
+{% endblock %}
 {% block content %}
 	<div class="card">
 	    <div class="card-header">
