--- a/templates/fund/fund_allocation.html
+++ b/templates/fund/fund_allocation.html
@@ -1,5 +1,7 @@
-{% extends 'fund_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	Fund | Allocation/Deallocation
+{% endblock %}
 {% block content %}
 	<h2>Fund Allocation</h2>
 	<b>Fund name: </b> {{fund_name}}<br>
