--- a/templates/income/detail.html
+++ b/templates/income/detail.html
@@ -1,5 +1,7 @@
-{% extends 'expense_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	Income | Detail
+{% endblock %}
 {% block content %}
 	<div class="card">
 	    <div class="card-header">
