--- a/templates/income/list.html
+++ b/templates/income/list.html
@@ -1,5 +1,7 @@
-{% extends 'income_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	Income | Home
+{% endblock %}
 {% block content %}
 		<ul class="nav">
 			<li class="nav-item">
