--- a/templates/diary/update.html
+++ b/templates/diary/update.html
@@ -1,9 +1,11 @@
-{% extends 'expense_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+    Expense | Update
+{% endblock %}
 {% block content %}
 <div class="card">
     <div class="card-header">
-        <h5 class="card-title">Expense Update #{{expenses.id}}</h5>
+        <h5 class="card-title">Diary Update #{{expenses.id}}</h5>
     </div>
     <div class="card-body">
         <form method="post">
