--- a/templates/expense_type/list.html
+++ b/templates/expense_type/list.html
@@ -1,5 +1,7 @@
-{% extends 'fund_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	Expense Type | Home
+{% endblock %}
 {% block content %}
 		<ul class="nav">
 			<li class="nav-item">
