--- a/templates/fund/detail.html
+++ b/templates/fund/detail.html
@@ -1,5 +1,7 @@
-{% extends 'fund_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	Fund | Detail
+{% endblock %}
 {% block content %}
 	<div class="card">
 	    <div class="card-header">
