--- a/templates/list/create.html
+++ b/templates/list/create.html
@@ -1,5 +1,7 @@
-{% extends 'diary_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	List | Add
+{% endblock %}
 {% block content %}
 	<div class="card">
 	    <div class="card-header">
