--- a/templates/list_entry/delete.html
+++ b/templates/list_entry/delete.html
@@ -1,5 +1,7 @@
-{% extends 'diary_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+	List Entry | Delete
+{% endblock %}
 {% block content %}
 	<div class="card">
 	    <div class="card-header">
