--- a/templates/list_entry/update.html
+++ b/templates/list_entry/update.html
@@ -1,5 +1,7 @@
-{% extends 'expense_base.html' %}
-
+{% extends 'base.html' %}
+{% block title %}
+    List Entry | Update
+{% endblock %}
 {% block content %}
 <div class="card">
     <div class="card-header">
