display the total expenses at the bottom of the table

--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -133,9 +133,15 @@
 					}
 				});
 			});
+
+			// parahrapg to display the total expenses
+			let total_expense_p = document.createElement("P");
+			total_expense_p.innerHTML = "<br>Total</br>: " + expenses.reduce((sum ,data) => sum + data.price);
 			// empty the div first before adding the new table
 			tableDiv.innerHTML = '';
 			tableDiv.appendChild(table);
+			tableDiv.appendChild(total_expense_p);
+
 		}
 
 		// create options for a select
