--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -157,7 +157,7 @@
 			radio.id = id;
 			radio.name = name;
 			radio.value = value;
-			radio.click = func;
+			radio.change = func;
 			let label = document.createElement("LABEL");
 			label.htmlFor = radio.id;
 			label.innerHTML = inner;
