--- a/templates/expenses/get_stats_view.html
+++ b/templates/expenses/get_stats_view.html
@@ -164,6 +164,7 @@
 
 			buttonDiv.appendChild(label);
 			buttonDiv.appendChild(radio);
+			buttonDiv.appendChild(document.createElement("BR"));
 		}
 
 		// create options for a select
