--- a/templates/diary/diary_create.html
+++ b/templates/diary/diary_create.html
@@ -19,7 +19,12 @@
 <script>
 	// initialize tiny mce
 	tinymce.init({
-    		selector: '#mytextarea'
+    		selector: '#mytextarea',
+			plugins: 'a11ychecker advcode casechange export formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
+			toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter pageembed permanentpen table',
+			toolbar_mode: 'floating', 
+			tinycomments_mode: 'embedded',
+			tinycomments_author: 'Author name', 
 		});
 	const update = () => {
 		let content = tinymce.get('mytextarea').getContent();
