--- a/templates/diary/diary_create.html
+++ b/templates/diary/diary_create.html
@@ -34,6 +34,7 @@
 
 	const get_diary_data = () => {
 		const url = '{{domain}}';
+		const csrftoken = getCookie();
 		const diary_data = {
 			title: diaryTitle.value,
 			content: tinymce.get("mytextarea").getContent()
@@ -43,7 +44,8 @@
 			method: 'POST',
 			body: JSON.stringify(diary_data),
 			headers: new Headers({
-				'Content-Type': 'application/json'
+				'Content-Type': 'application/json',
+				'X-CSRFToken': csrftoken
 			})
 		});
 
@@ -58,6 +60,21 @@
 		console.log(data);
 
 		return data;
+	}
+
+	function getCookie(name) {
+	    var cookieValue = null;
+	    if (document.cookie && document.cookie !== '') {
+	        var cookies = document.cookie.split(';');
+	        for (var i = 0; i < cookies.length; i++) {
+	            var cookie = cookies[i].trim();
+	            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+	                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+	                break;
+	            }
+	        }
+	    }
+	    return cookieValue;
 	}
 
 	let diaryTitle = document.getElementById('id_title');
