--- a/templates/diary/diary_create.html
+++ b/templates/diary/diary_create.html
@@ -53,7 +53,7 @@
 	}
 
 	const post = async () => {
-		const request = get_diary_data();
+		const request = get_diary_data('csrftoken');
 		const res = await fetch(request);
 		const data = await res.json();
 
