--- a/templates/diary/diary_create.html
+++ b/templates/diary/diary_create.html
@@ -15,6 +15,10 @@
 
 	<button onclick="post(this)">post</button>
 
+	<div id="output-div">
+		
+	</div>	
+
 
 <script>
 	// initialize tiny mce
@@ -58,6 +62,7 @@
 		const data = await res.json();
 
 		console.log(data);
+		outputDiv.innerHTML = data;
 
 		return data;
 	}
@@ -78,6 +83,7 @@
 	}
 
 	let diaryTitle = document.getElementById('id_title');
+	const outputDiv = document.getElementById('output-div');
 
 </script>
 {% endblock %}
