after diary creation redirect to the diary list

--- a/templates/diary/diary_create.html
+++ b/templates/diary/diary_create.html
@@ -61,10 +61,8 @@
 		const res = await fetch(request);
 		const data = await res.json();
 
-		console.log(data);
-		outputDiv.innerHTML = data["content"];
-
-		return data;
+		// redirect to list of diary entries
+		window.location.replace("{{diaries_list_url}}");
 	}
 
 	function getCookie(name) {
