--- a/templates/diary/diary_create.html
+++ b/templates/diary/diary_create.html
@@ -62,7 +62,7 @@
 		const data = await res.json();
 
 		// redirect to list of diary entries
-		window.location.replace("{{diaries_list_url}}");
+		window.location.href("{{diaries_list_url}}");
 	}
 
 	function getCookie(name) {
