--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -54,7 +54,7 @@
 					if(diary_property == 'content'){
 						// do nothing if the property is the content
 					}else{
-						cell.innerHTML = diary_property
+						cell.innerHTML = diary_property_value;
 					}
 				});
 			});
