--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -51,7 +51,7 @@
 					let diary_property_value = diary[diary_property];
 					// add the cells that contain the properties of the expenses
 					let cell = row.insertCell(j);
-					if(diary_property == 'content'){
+					if(diary_property == 'content' || diary_property == 'user'){
 						// do nothing if the property is the content
 					}else{
 						cell.innerHTML = diary_property_value;
