--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -50,7 +50,7 @@
 				// insert a row on table for each expense entry
 				let row = table.insertRow(i);
 				row.id = diary['id'];
-				row.onclick = update_selected_index;
+				row.onclick = update_selected_index(diary['id']);
 				// the properties of the expense such as desctription, price, ...etc
 				let diary_properties = Object.keys(diary);
 				diary_properties.forEach((diary_property, j) => {
