--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -33,13 +33,13 @@
 			return data;
 		}
 
-		const update_selected_index = () => {
-			selected_index = this.id;
-			console.log(selected_index);
+		const update_selected_index = (e) => {
+			// selected_index = this.id;
+			console.log(e.srcElement);
 		}
 
 		// create a table base on fund and category
-		const createTable = () => {
+		const createTable = (e) => {
 			let diaries = diary_data;
 			// table to tabulate all of the expense data
 			let table = document.createElement("TABLE");
@@ -50,7 +50,7 @@
 				// insert a row on table for each expense entry
 				let row = table.insertRow(i);
 				row.id = diary['id'];
-				row.onclick = update_selected_index(diary['id']);
+				row.onclick = update_selected_index;
 				// the properties of the expense such as desctription, price, ...etc
 				let diary_properties = Object.keys(diary);
 				diary_properties.forEach((diary_property, j) => {
