--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -35,7 +35,7 @@
 
 		const update_selected_index = (e) => {
 			// selected_index = this.id;
-			console.log(e.srcElement);
+			console.log(e.srcElement.parentNode);
 		}
 
 		// create a table base on fund and category
