--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -34,8 +34,9 @@
 		}
 
 		const update_selected_index = (e) => {
-			// selected_index = this.id;
-			console.log(e.srcElement.parentNode);
+			// the index of the selected element
+			selected_index = e.srcElement.parentNode.id;
+			console.log(diary_data[selected_index]);
 		}
 
 		// create a table base on fund and category
@@ -49,7 +50,7 @@
 			diaries.forEach((diary, i) => {
 				// insert a row on table for each expense entry
 				let row = table.insertRow(i);
-				row.id = diary['id'];
+				row.id = i;
 				row.onclick = update_selected_index;
 				// the properties of the expense such as desctription, price, ...etc
 				let diary_properties = Object.keys(diary);
