--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -48,7 +48,7 @@
 		const showTable = () => {
 			tableDiv.style.visibility = "visible";
 			showTableBtn.style.visibility = "hidden";
-			contentDiv.style.visibility = "hiddent";
+			contentDiv.style.visibility = "hidden";
 		}
 
 		const displayContent = (content) => {
