--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -43,6 +43,7 @@
 			// hide the table
 			tableDiv.style.display = "none";
 			showTableBtn.style.display = "inline";
+			contentDiv.style.display = "block";
 		}
 
 		const showTable = () => {
