added the button to create diary

--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -17,6 +17,7 @@
 	<div id="control-div">
 		<button onclick="createTable(this)">table</button>
 		<button onclick="showTable(this)" id="show-table-btn">show table</button>
+		<a href="{{diary_create}}" class="btn btn-success">create diary</a>
 	</div>
 	<div id="content-div">
 	</div>
