--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -19,8 +19,8 @@
 		<button onclick="showTable(this)" id="show-table-btn">show table</button>
 		<a href="{{diary_create}}" class="btn btn-success" id="create-diary-btn">create diary</a>
 
-		<button onclick="showTable(this)">Display Table</button>
-		<button onclick="showTable(this)">Hide Table</button>
+		<button onclick="displayDiaryList(this)">Display Table</button>
+		<button onclick="hideDiaryList(this)">Hide Table</button>
 	</div>
 	<div id="content-div">
 	</div>
