--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -16,7 +16,7 @@
 	</div>
 	<div id="control-div">
 		<button onclick="createTable(this)">table</button>
-		<button onclick="showTable(this)" id="show-table-btn">show table</button>
+		<button onclick="displayDiaryList(this)" id="show-table-btn">show table</button>
 		<a href="{{diary_create}}" class="btn btn-success" id="create-diary-btn">create diary</a>
 
 		<button onclick="displayDiaryList(this)">Display Table</button>
