--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -55,7 +55,7 @@
 		const hideDiaryList = () => setElementsDisplay(diaryListComponents, 'none');
 
 		const setElementsDisplay = (elements, display_type) => {
-			elements.forEach((element) => element.style.display = display)
+			elements.forEach((element) => {element.style.display = display})
 		}
 
 		const displayContent = (content) => {
