--- a/templates/diary/diary_list.html
+++ b/templates/diary/diary_list.html
@@ -55,6 +55,7 @@
 		const hideDiaryList = () => setElementsDisplay(diaryListComponents, 'none');
 
 		const setElementsDisplay = (elements, display_type) => {
+			console.log(elements)
 			elements.forEach((element) => {element.style.display = display})
 		}
 
